--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "npm test",
-    "start": "node server.js"
+    "start": "NODE_ENV=development nodemon server.js"
   },
   "author": "lgargantini",
   "license": "ISC"
